--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "cosmiconfig": "5.2.1",
     "css-loader": "3.5.3",
     "dotenv": "8.2.0",
-    "elm": "latest-0.19.1",
+    "elm": "^0.19.1-3",
     "elm-asset-webpack-loader": "1.1.2",
     "elm-hot-webpack-loader": "1.1.6",
-    "elm-test": "latest-0.19.1",
+    "elm-test": "^0.19.1-revision2",
     "elm-webpack-loader": "6.0.1",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "4.3.0",
@@ -58,6 +58,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "dependencies": {
+    "elm-format": "^0.8.3",
     "firebase": "^7.15.0"
   }
 }
